# marine-track

./: .env.example  .gitignore  README.md  deploy_fix_telegram.sh  deploy_prepare.py  deploy_telegram_bot.sh  deploy_with_cache.sh  deploy_with_providers.sh  install_telegram_bot.sh  install_with_cache.sh  install_with_providers.sh  provider_configure.py  provider_preflight.py  pyproject.toml  register_telegram_commands.py  repair_env_permissions.sh  runtime_check.py  telegram_configure.py  telegram_healthcheck.py
.phase2_payload/: 00  01
config/: processing.yaml  sources.yaml
docs/: .security-hardening-placeholder  AUDIT_2026-07-10.md  CALIBRATION.md  CALIBRATION_AREA_WORKFLOW.md  CALIBRATION_PHASE2.md  CFAR_TILING_LIMITS.md  DATA_SOURCES.md  DEPLOYMENT.md  DETECTION_METHOD.md  EFFECTIVE_CONFIG_PROVENANCE.md  FEATURE_CATALOG.md  IMPLEMENTATION_PLAN.md  PROVIDERS.md  PROVIDER_CANARY.md  RELEASE_GATE.md  RESULT_SEMANTICS_AIS_QC.md  SCIENCE_BASIS.md  SECURITY_CACHE_HARDENING.md  SENTINEL1_OPERATIONAL_BASELINE.md  TECHNICAL_SPEC.md  TELEGRAM_BOT.md  TELEGRAM_USER_STATE.md  TROUBLESHOOTING.md  TYPED_ASSETS_CDSE.md  UX_REVIEW.md
ops/: .finalize-pr29  .ops1-finalize-trigger  .provider-canary-finalize-trigger  marine-track.service
scripts/: .operational-s1-01-config-runtime.patch  .operational-s1-02-processing-pipeline.patch  .operational-s1-03-materialization.patch  .operational-s1-04-explicit-source.patch  agent_atomic_release_health.py  agent_effective_config_provenance.py  agent_finalize_cfar_tiling.py  agent_finish_result_semantics.py  agent_live_canary_fix.py  agent_live_canary_hardening.py  agent_live_canary_selftest.py  agent_retry_safe_deploy.py  agent_security_hardening.py  (+8 more)
(+142 files in other folders)
