[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "marine-track"
version = "0.1.0"
description = "MVP for vessel and ship-wake detection from open satellite imagery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "marine-track contributors" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.0",
  "shapely>=2.0",
  "pyproj>=3.6",
  "geopandas>=0.14",
  "rasterio>=1.3",
  "rioxarray>=0.15",
  "xarray>=2024.1",
  "scipy>=1.10",
  "scikit-image>=0.22",
  "opencv-python-headless>=4.8",
  "python-telegram-bot>=22,<23",
  "pyarrow>=14.0"
]

[project.optional-dependencies]
scene-providers = [
  "pystac-client>=0.7",
  "planetary-computer>=1.0",
  "asf-search>=7.0",
  "sentinelhub>=3.10"
]
aux-providers = [
  "copernicusmarine>=2.0"
]
providers = [
  "pystac-client>=0.7",
  "planetary-computer>=1.0",
  "asf-search>=7.0",
  "sentinelhub>=3.10",
  "copernicusmarine>=2.0"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8"
]

[project.scripts]
marine-track = "marine_track.cli:app"
marine-track-bot = "marine_track.telegram_bot:main"

[tool.hatch.build.targets.wheel]
packages = ["src/marine_track"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/marine_track/cache_policy.py" = ["F401"]
"src/marine_track/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
